@@ -159,7 +159,10 @@ def url_for(*args, **kargs):
             url += '/'
     if anchor: url += '#' + _url_quote(anchor)
     if host or protocol:
-        if not host: host = config.host
+        if not host:
+            # Ensure we don't use a specific port, as changing the protocol
+            # means that we most likely need a new port
+            host = config.host.split(':')[0]
         if not protocol: protocol = config.protocol
         url = protocol + '://' + host + url
     return url
